--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("[",murphydiag)
 S3method(c,murphydiag)
 S3method(murphydiag,default)
 S3method(murphydiag,lm)
+S3method(murphydiag,rq)
 S3method(plot,murphydiag)
 S3method(plot,murphydiag_diff)
 export(es_expect)
