import predict.rq correctly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,4 +28,5 @@ export(murphydiag)
 export(murphydiag_diff)
 importFrom(graphics,abline)
 importFrom(graphics,matplot)
+importFrom(quantreg,predict.rq)
 importFrom(stats,predict)
