--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ Description: Score calculation and printing methods for
   Choquet representations and forecast rankings').
 License: GPL-3
 RoxygenNote: 6.0.1
+Imports: quantreg
