use predict functions from other packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("[",murphydiag)
 S3method(c,murphydiag)
 S3method(murphydiag,default)
 S3method(murphydiag,lm)
+S3method(murphydiag,randomForest)
 S3method(murphydiag,rq)
 S3method(plot,murphydiag)
 S3method(plot,murphydiag_diff)
@@ -28,5 +29,4 @@ export(murphydiag)
 export(murphydiag_diff)
 importFrom(graphics,abline)
 importFrom(graphics,matplot)
-importFrom(quantreg,predict.rq)
 importFrom(stats,predict)
