export functions for full scores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,11 @@ export(es_mean)
 export(es_median)
 export(es_prob)
 export(es_quant)
+export(fs_expect)
+export(fs_mean)
+export(fs_median)
+export(fs_prob)
+export(fs_quant)
 export(ms_expect)
 export(ms_expect_fun)
 export(ms_fun)
