export functions for full scores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,16 @@ export(es_median)
 export(es_prob)
 export(es_quant)
 export(fs_expect)
+export(fs_expect_fun)
+export(fs_fun)
 export(fs_mean)
+export(fs_mean_fun)
 export(fs_median)
+export(fs_median_fun)
 export(fs_prob)
+export(fs_prob_fun)
 export(fs_quant)
+export(fs_quant_fun)
 export(ms_expect)
 export(ms_expect_fun)
 export(ms_fun)
