--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,4 +40,5 @@ export(murphydiag)
 export(murphydiag_diff)
 importFrom(graphics,abline)
 importFrom(graphics,matplot)
+importFrom(magrittr,"%>%")
 importFrom(stats,predict)
