--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,10 @@ export(ms_quant_fun)
 export(murphydiag)
 export(murphydiag_diff)
 importFrom(graphics,abline)
+importFrom(graphics,lines)
 importFrom(graphics,matplot)
+importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
 importFrom(stats,predict)
+importFrom(stats,qnorm)
+importFrom(stats,sd)
