docu/pass checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%>%")
+importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
