--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method("-",murphydiag)
 S3method("[",murphydiag)
+S3method(as.data.frame,murphydiag)
 S3method(c,murphydiag)
 S3method(murphydiag,default)
 S3method(murphydiag,lm)
@@ -10,10 +11,16 @@ S3method(murphydiag,rq)
 S3method(plot,murphydiag)
 S3method(plot,murphydiag_diff)
 export(es_expect)
+export(es_expect_fun)
+export(es_fun)
 export(es_mean)
+export(es_mean_fun)
 export(es_median)
+export(es_median_fun)
 export(es_prob)
+export(es_prob_fun)
 export(es_quant)
+export(es_quant_fun)
 export(ms_expect)
 export(ms_expect_fun)
 export(ms_fun)
@@ -31,7 +38,6 @@ importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,polygon)
-importFrom(magrittr,"%>%")
 importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
