--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method("-",murphydiag)
 S3method("[",dominance)
 S3method("[",murphydiag)
 S3method(as.data.frame,murphydiag)
+S3method(as.murphydiag,data.frame)
+S3method(as.murphydiag,default)
+S3method(as.murphydiag,murphydiag)
 S3method(c,murphydiag)
 S3method(knots,murphydiag)
 S3method(murphydiag,default)
@@ -13,11 +16,11 @@ S3method(murphydiag,rq)
 S3method(plot,dominance)
 S3method(plot,murphydiag)
 S3method(plot,murphydiag_diff)
+export(as.murphydiag)
 export(dominance)
 export(drawExample)
 export(es_expect)
 export(es_expect_fun)
-export(es_fun)
 export(es_mean)
 export(es_mean_fun)
 export(es_median)
@@ -26,9 +29,9 @@ export(es_prob)
 export(es_prob_fun)
 export(es_quant)
 export(es_quant_fun)
+export(generalizeFunctional)
 export(ms_expect)
 export(ms_expect_fun)
-export(ms_fun)
 export(ms_mean)
 export(ms_mean_fun)
 export(ms_median)
@@ -39,6 +42,8 @@ export(ms_quant)
 export(ms_quant_fun)
 export(murphydiag)
 export(murphydiag_diff)
+export(simplifyFunctional)
+importFrom(Rcpp,sourceCpp)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
@@ -48,3 +53,4 @@ importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
+useDynLib(murphydiagram2)
