--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,21 @@ S3method("[",murphydiag)
 S3method(as.data.frame,murphydiag)
 S3method(as.murphydiag,data.frame)
 S3method(as.murphydiag,default)
+S3method(as.murphydiag,lm)
 S3method(as.murphydiag,murphydiag)
+S3method(as.murphydiag,randomForest)
+S3method(as.murphydiag,rq)
+S3method(autolayer,murphydiag)
+S3method(autoplot,murphydiag)
 S3method(c,murphydiag)
 S3method(knots,murphydiag)
-S3method(murphydiag,default)
-S3method(murphydiag,lm)
-S3method(murphydiag,randomForest)
-S3method(murphydiag,rq)
+S3method(lines,murphydiag)
+S3method(nobs,murphydiag)
 S3method(plot,dominance)
 S3method(plot,murphydiag)
 S3method(plot,murphydiag_diff)
+S3method(print,murphydiag)
+S3method(range,murphydiag)
 export(as.murphydiag)
 export(dominance)
 export(drawExample)
@@ -30,6 +35,9 @@ export(es_prob_fun)
 export(es_quant)
 export(es_quant_fun)
 export(generalizeFunctional)
+export(is.murphydiag)
+export(m_approx)
+export(m_filter)
 export(ms_expect)
 export(ms_expect_fun)
 export(ms_mean)
@@ -41,16 +49,25 @@ export(ms_prob_fun)
 export(ms_quant)
 export(ms_quant_fun)
 export(murphydiag)
+export(murphydiag0)
 export(murphydiag_diff)
 export(simplifyFunctional)
 importFrom(Rcpp,sourceCpp)
+importFrom(ggplot2,autolayer)
+importFrom(ggplot2,autoplot)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
+importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(graphics,polygon)
+importFrom(stats,approx)
 importFrom(stats,knots)
 importFrom(stats,lm)
+importFrom(stats,nobs)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
+importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(murphydiagram2)
